# buracao-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  \
buracao-cli/: Cargo.toml
buracao-cli/src/: main.rs
buracao-client-cli/: Cargo.toml
buracao-client-cli/src/: main.rs
buracao-core/: Cargo.toml
buracao-core/src/: acoes.rs  baralho.rs  estado.rs  lib.rs  regras.rs
buracao-server/: Cargo.toml
buracao-server/src/: handler.rs  main.rs  state.rs
buracao-web/: Cargo.toml  Trunk.toml  index.html
buracao-web/src/: app.rs  main.rs
buracao-web/src/components/: board.rs  card.rs  controls.rs  hand.rs  login.rs  mod.rs  notification.rs  opponents.rs  scoreboard.rs  settings.rs  table.rs  turn_indicator.rs
buracao-web/src/utils/: assets.rs  helper.rs  mappers.rs  mod.rs
buracao_core/: Cargo.toml
buracao_core/src/: lib.rs
buracao_server/: Cargo.toml
buracao_server/src/: main.rs
deploy/: buracao-server
