[package]
name = "buracao-client-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
buracao-core = { path = "../buracao-core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
crossterm = "0.29"                                 # Opcional, mas ajuda a limpar a tela
