[package]
name = "buracao-server"
version = "0.1.0"
edition = "2024"        # Recomendo manter 2021 por enquanto, 2024 ainda é instável em alguns tools

[dependencies]
buracao-core = { path = "../buracao-core" }
tokio = { version = "1.49.0", features = ["full"] }
warp = { version = "0.4.2", features = ["websocket", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dashmap = "7.0.0-rc2"
